Milestone 1: GUI elements in place without all backend functionality in place

--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/webapp/templates/ShowPage.html
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/webapp/templates/ShowPage.html
@@ -262,6 +262,11 @@ function resizeiframe(id) {
                       <!-- just a message, so will display when it should not-->
                       <div rsf:id="msg=simplepage.exportcc-descrip"></div>
                     </li>
+                    <li>
+                      <a href="#" role="menuitem" rsf:id="add-alert" id="add-alert"><span rsf:id="msg=simplepage.add-alert"></span></a>
+                      <!-- just a message, so will display when it should not-->
+                      <div rsf:id="msg=simplepage.add-alert-descrip"></div>
+                    </li>
 		  </ul>
 		</div>
 
@@ -760,6 +765,8 @@ function resizeiframe(id) {
 			  <p rsf:id="msg=simplepage.change_caption" id="simplepage.change_caption"></p>
 			  <p rsf:id="siteid" id="siteid"></p>
 			  <p rsf:id="locale" id="locale"></p>
+			  <p rsf:id="msg=simplepage.add-alert-need-role" id="simplepage.add-alert-need-role"></p>
+			  <p rsf:id="msg=simplepage.add-alert-need-begin-date" id="simplepage.add-alert-need-begin-date"></p>
 			</div>
 
 			<div id="subpage-dialog" rsf:id="subpage-dialog">
@@ -1154,6 +1161,80 @@ function resizeiframe(id) {
 					    <input type="submit" rsf:id="export-cc-cancel" onclick="closeExportCcDialog(); return false" />
 					  </p>
 
+					</div>
+				</form>
+			</div>
+			
+			<div id="add-alert-dialog" rsf:id="add-alert-dialog">
+				<div class="ui-widget" id="add-alert-error-container" style="display:none">
+					<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;"> 
+						<p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span> 
+						<strong rsf:id="msg=simplepage.error_colon"></strong> <span id="add-alert-error"></span></p>
+					</div>
+				</div>
+				<form action="#" rsf:id="add-alert-form" method="post" enctype="multipart/form-data" class="controlPanel">
+					<input type="hidden" rsf:id="csrf22" />
+					<div class="">
+					  <table>
+					  	<tr>
+					  		<td valign="top">
+					  			<label rsf:id="msg=simplepage.add-alert.to" id="add-alert-to-label">To</label>:
+					  		</td>
+					  		<td>
+					  			<!-- Select All -->
+					  			<input type="checkbox" id="add-alert-all-roles"/>
+					    		<label rsf:id="msg=simplepage.add-alert-all-roles" for="add-alert-all-roles" id="add-alert-all-roles-label">All Roles</label> 
+					    		<br/>
+					    		<span rsf:id="addAlertRoleSelect"/>
+					    		<span rsf:id="role:" role="listitem">
+						    		<input rsf:id="roleOption" class="add-alert-role" type="checkbox"/>
+						    		<label rsf:id="roleOptionLabel">Role 1</label> 
+						    		<br/>
+					    		</span>
+					  		</td>
+					  	</tr>
+					  </table>
+					  <br/>
+					  <label rsf:id="msg=simplepage.add-alert.specify-dates" id="add-alert.specify-dates-label">Specify Dates</label>&nbsp;-&nbsp;(<span rsf:id="msg=simplepage.add-alert.specify-dates-info" id="add-alert.specify-dates-info-label">Choose when  this alert will be sent</span>)
+					  <br/>
+					  <span rsf:id="msg=simplepage.add-alert.beginning" id="simplepage.add-alert.beginning">Beginning</span>:&nbsp;<input id="addAlertBeginDateInput" type="text" /><input rsf:id="addAlertBeginDate" id="addAlertBeginDate" type="hidden" />
+					  <script type="text/javascript">
+		                localDatePicker({
+		                    input: '#addAlertBeginDateInput',
+		                    useTime: 1,
+		                    parseFormat: 'YYYY-MM-DD HH:mm:ss',
+		                    val: $("#addAlertBeginDate").val(),
+		                    ashidden: { iso8601: 'addAlertBeginDate' }
+		                });
+		              </script>
+					  <br/><br/>
+					  <span rsf:id="msg=simplepage.add-alert.recurrence" id="simplepage.add-alert.recurrence">Recurrence</span>
+					  <br/>
+					  <span rsf:id="add-alert-recurrence" />
+                      <input type="radio" name="addAlertRecurrenceGroup" rsf:id="addAlertRecurrenceNone" id="addAlertRecurrenceNone" />
+                      <label for="addAlertRecurrenceNone" rsf:id="msg=simplepage.add-alert.none" />
+                      <input type="radio" name="addAlertRecurrenceGroup" rsf:id="addAlertRecurrenceDaily" id="addAlertRecurrenceDaily" />
+                      <label for="addAlertRecurrenceDaily" rsf:id="msg=simplepage.add-alert.daily" />
+                      <input type="radio" name="addAlertRecurrenceGroup" rsf:id="addAlertRecurrenceWeekly" id="addAlertRecurrenceWeekly" />
+                      <label for="addAlertRecurrenceWeekly" rsf:id="msg=simplepage.add-alert.weekly" />
+					  <br/><br/>
+					  <div>
+						<label for="add-alert-student-message"><span rsf:id="msg=simplepage.add-alert-student-message-label"></span>:</label>
+							<div>
+								<textarea rsf:id="add-alert-student-message" id="add-alert-student-message" rows="6" columns="50" style="width: 100%"></textarea>
+                            </div>
+					  </div>
+					  <br/>
+					  <div>
+						<label for="add-alert-other-message"><span rsf:id="msg=simplepage.add-alert-other-message-label"></span>:</label>
+							<div>
+								<textarea rsf:id="add-alert-other-message" id="add-alert-other-message" rows="6" columns="50" style="width: 100%"></textarea>
+                            </div>
+					  </div>
+					  <p>
+					  	<input class="bold" type="submit" onclick="return prepareAddAlertDialog();" id="add-alert-submit" rsf:id="add-alert-submit" />
+					    <input type="submit" rsf:id="add-alert-cancel" onclick="closeAddAlertDialog(); return false" />
+					  </p>
 					</div>
 				</form>
 			</div>
