--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/webapp/templates/ShowPage.html
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/webapp/templates/ShowPage.html
@@ -1208,21 +1208,24 @@ function resizeiframe(id) {
 		                });
 		              </script>
 					  <br/>
-					  <span rsf:id="msg=simplepage.add-alert.ending" id="simplepage.add-alert.ending">Ending</span>:&nbsp;<input id="addAlertEndDateInput" type="text" /><input rsf:id="addAlertEndDate" id="addAlertEndDate" type="hidden" />
-					  <script type="text/javascript">
-		                localDatePicker({
-		                    input: '#addAlertEndDateInput',
-		                    useTime: 1,
-		                    parseFormat: 'YYYY-MM-DD HH:mm:ss',
-		                    val: $("#addAlertEndDate").val(),
-		                    ashidden: { iso8601: 'addAlertEndDate' }
-		                });
-		              </script>
-					  <br/><br/>
+					  <span class="addAlertEndDateInputSpan">
+						  <span rsf:id="msg=simplepage.add-alert.ending" id="simplepage.add-alert.ending">Ending</span>:&nbsp;<input id="addAlertEndDateInput" type="text" /><input rsf:id="addAlertEndDate" id="addAlertEndDate" type="hidden" />
+						  <script type="text/javascript">
+			                localDatePicker({
+			                    input: '#addAlertEndDateInput',
+			                    useTime: 1,
+			                    parseFormat: 'YYYY-MM-DD HH:mm:ss',
+			                    val: $("#addAlertEndDate").val(),
+			                    ashidden: { iso8601: 'addAlertEndDate' }
+			                });
+			              </script>
+						  <br/>
+					  </span>
+					  <br/>
 					  <span rsf:id="msg=simplepage.add-alert.recurrence" id="simplepage.add-alert.recurrence">Recurrence</span>
 					  <br/>
 					  <span rsf:id="add-alert-recurrence" />
-                      <input type="radio" name="addAlertRecurrenceGroup" rsf:id="addAlertRecurrenceNone" id="addAlertRecurrenceNone" />
+                      <input type="radio" name="addAlertRecurrenceGroup" rsf:id="addAlertRecurrenceNone" id="addAlertRecurrenceNone" onchange="$('#addAlertEndDateInput').toggle($(this).is(':checked'));"/>
                       <label for="addAlertRecurrenceNone" rsf:id="msg=simplepage.add-alert.none" />
                       <input type="radio" name="addAlertRecurrenceGroup" rsf:id="addAlertRecurrenceDaily" id="addAlertRecurrenceDaily" />
                       <label for="addAlertRecurrenceDaily" rsf:id="msg=simplepage.add-alert.daily" />
