--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
@@ -25,6 +25,7 @@ function handleEnterKeyPress(ev)
 			var $pan = $('#peerReviewInfo')
    	 		if ($pan.is(':visible') && ev.target.id !== 'peerReviewInfo' && ev.target.id !== 'infoImg' && ev.target.id !== 'grade') $pan.hide();
 		});
+		disableBackButton();
     });
 
 var reportsExpanded = false;
@@ -53,7 +54,7 @@ function handleReportsTriangleDisclosure(btn)
 		#if ($allowAddAssignment)
 			#set($prevAction=true)
 			<li class="firstToolBarItem">
-				<span><a href="#toolLink("$action" "doNew_assignment")" title="$!tlang.getString("new")">$!tlang.getString("new")</a></span>
+				<span><a href="#" title = "$!tlang.getString('new')" onclick="javascript:document.gradeForm.onsubmit();document.getElementById('option').value='new';document.getElementById('view').value='new';document.gradeForm.submit();return false;">$!tlang.getString("new")</a></span>
 			</li>
 		#end
 		<li #if ($prevAction==false) class="firstToolBarItem" #set($prevAction=true)  #end>
