--- a/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitebrowser/chef_sitebrowser_simpleSearch.vm
+++ b/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitebrowser/chef_sitebrowser_simpleSearch.vm
@@ -27,7 +27,7 @@
 		<h3>$tlang.getString("se.search")</h3>
 		<p class="instruction">$tlang.getString("se.complete")</p>
 	
-		<form action="#toolForm("$action")" method="post">		
+		<form action="#toolForm("$action")" method="post" id="siteSearch">		
 		<fieldset style="margin-top:0"><legend>
 		<h4>$tlang.getString("se.type")</h4>
         </legend>
@@ -37,7 +37,7 @@
 				#set($siteTypeCount=$siteTypeCount + 1)
 					#if ($type == $termSearchSiteType)
 						<input type="hidden" name="ClassSiteFromSystem" value="true" />
-						<div class="checkbox indnt1">
+						<div class="checkbox indnt1 $type">
 							<input  type="radio" name="siteType" class="siteTypeTerm" id="siteType$siteTypeCount" value="$type" />
 							<label for="siteType$siteTypeCount"  style="text-transform: capitalize">$type</label>
 						</div>
@@ -51,7 +51,7 @@
 							</select>
 						</div>	
 					#else
-						<div class="checkbox indnt1">
+						<div class="checkbox indnt1 $type">
 							<input type="radio" name="siteType" id="siteType$siteTypeCount" value="$type" />
 							<label for="siteType$siteTypeCount"  style="text-transform: capitalize">$type</label>
 						</div>
@@ -59,7 +59,7 @@
 				#end
 			#end
 		
-			<div class="checkbox indnt1">
+			<div class="checkbox indnt1 $type">
 				<input type="radio" name="siteType" id="siteTypeAny" value="Any" checked="checked" />
 				<label for="siteTypeAny">$tlang.getString("se.any")</label>
 			</div>
