--- a/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
+++ b/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
@@ -51,9 +51,11 @@
 				<label for="view">$tlang.getString("list.view")</label>
 				<select id="view" name="view" size="1" onchange="document.viewForm.submit();">
 					#foreach($view in $viewKeys)
+                      #if ($views.get($view) != "portfolio")
 						<option value ="$view"
 						#if($view == $viewSelected) selected="selected" #end
 						> $views.get($view) </option>
+                      #end
 					#end
 				</select>
 				#if(!$hideTermFilter)
