--- a/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourse.vm
+++ b/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourse.vm
@@ -207,14 +207,14 @@ function redirectBasedOnSelection(){
 				#foreach($courseObject in $termCourseList)
 					<table class="listHier lines nolines specialLink" cellpadding="0" cellspacing="0"  summary="$tlang.getString("nscourse.courselist.summary")" border="0" style="width:auto">
 					<tr>	
-					<th colspan="2">
+					<th colspan="2" style="width:400px">
                                         $!courseObject.title ($!courseObject.eid) $!courseObject.description
 					#if ($!courseObject.courseOfferingObjects.size() > 1)
 						(cross-listed)
 						#set($crosslisted=1)	
 					#end
 					</th>
-					<th>
+					<th style="width:200px">
 						$tlang.getString("useOfficialDescription")
 					</th>
 					</tr>
@@ -257,7 +257,7 @@ function redirectBasedOnSelection(){
 									id="row-course$courseNumber"
 								><td class="attach"
 								#if (!$!sectionObject.isLecture)
-									style="padding-left:1.5em"
+									style=""
 								#end
 								>
 								<input type="checkbox" name="providerCourseAdd" value="$!sectionObject.eid" id="course$courseNumber"
@@ -297,7 +297,6 @@ function redirectBasedOnSelection(){
 						#end
 					#end
 					</table>
-					<p></p>
 				 #end
 			#else
 				## no registered course
@@ -373,14 +372,6 @@ function redirectBasedOnSelection(){
 					id="cancelButton" 
 					value="$tlang.getString('gen.cancel')"
 					onclick="document.addCourseForm.option.value='cancel'; document.addCourseForm.submit(); return false;"
-					/>
-				<input
-					type="button" 
-					accesskey="x"
-					name="Cancel" 
-					id="cancelButton" 
-					value="$tlang.getString('nscourse.no_rosters')"
-					onclick="document.addCourseForm.option.value='norosters'; document.addCourseForm.submit(); return false;"
 					/>
 					<span id="submitnotif" style="visibility:hidden">$tlang.getString("gen.proces")</span>
 				</p>
