--- a/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourseManual.vm
+++ b/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourseManual.vm
@@ -55,7 +55,13 @@
 								</p>
 							#end
 				#end
-				<p class="instruction">$tlang.getString("man.sofar") #if($!site) $tlang.getString("man.toaddto") #else $tlang.getString("java.for") #end $tlang.getString("man.this")</p>
+
+                #if ($!providerCourseList.size() > 0 || $!manualCourseList.size()>0)
+                     <p class="instruction">$tlang.getString("man.sofar") #if($!site) $tlang.getString("man.toaddto") #else $tlang.getString("java.for") #end $tlang.getString("man.this")</p>
+                #else
+                     <p class="instruction">You are not listed in Homer as an instructor for any courses this term. Click Back to select a different term.</p>
+                #end
+
 				<table class="listHier lines nolines" cellapadding="0" cellspacing="0" summary="todo: summary" style="width:auto">
 					#foreach ($item in $!selectedProviderCourseTitles.keySet())
 						<tr>
@@ -108,62 +114,7 @@
 							#end
 						</table>	
 					#end
-				<p class="instruction">
-					#if (!$!isFutureTerm)
-						$tlang.getString("man.please_enter")
-					#else
-						$tlang.getString("man.enter2") <span class="reqStarInline">*</span> $tlang.getString("man.means")
-					#end
-				</p>
-				<table  class="listHier lines nolines"  style="width:50%" border="0" cellpadding="0" cellspacing="0" summary="$tlang.getString("man.list.summary")">
-					<tr>
-						#set($bound = $!form_requiredFields.size())
-						#set($bound = $bound - 1)
-						<th id="rownNum">
-							&nbsp;
-						</th>
-						#foreach ($fieldCount in [0..$!bound])
-								#set($field = $!form_requiredFields.get($fieldCount))
-								#set($fieldLabel = $!form_requiredFields.get($fieldCount).labelKey)
-									<th id="$!fieldLabel">	
-										<span class ="reqStarInline">* </span>$fieldLabel
-									</th>
-						#end
-					</tr>
-					#set ($count = 1)
-					#set ($rowcount = 1)
-					#foreach ($k in [0..$listSize])
-						#set($courseFieldValues = $!fieldValues.get($k))
-						<tr>
-							<td headers="rownNum">$rowcount</td>
-							#foreach ($fieldCount in [0..$!bound])
-								#set($field = $!form_requiredFields.get($fieldCount))
-								#set($fieldLabel = $!form_requiredFields.get($fieldCount).labelKey)
-								#set($fieldSize = 8)
-								#set($fieldSize = $!form_requiredFields.get($fieldCount).getMaxSize())
-								<td headers="$fieldLabel" class="shorttext">
-									<label  for="id-$fieldLabel$rowcount" class="skip">$fieldLabel</label>
-									<input type="text" name="$fieldLabel$k"  tabindex="$count" size="$!fieldSize" maxlength="$!fieldSize" value="$!courseFieldValues.get($fieldCount).getValue()"  id="id-$fieldLabel$rowcount" /> 
-									#set ($count = $count + 1)
-
-								</td>
-							#end
-						</tr>
-										#set ($rowcount = $rowcount + 1)
-						#end
-					<tr>
-						<td></td>
-						<td colspan="3">
-						<label for="number" class="skip">$tlang.getString("man.addmore.label")</label>
-							<select name="number" id="number" onchange="document.requestCourseForm.option.value='change';javascript:document.requestCourseForm.submit();" tabindex = "$count">
-								<option selected="selected">$tlang.getString("man.addmore")</option>
-								#foreach ($j in [1..3])
-									<option value="$j">$j $tlang.getString("multipleTools.more")</option>
-								#end
-							</select>
-						</td>
-					</tr>
-				</table>
+  
 				<div>
 					#if ($!isFutureTerm)
 						<h4>$tlang.getString("man.siteroster")</h4>
@@ -217,6 +168,7 @@
 						#if ($!basedOnTemplate) value="$tlang.getString('sitetype.done')" #else value="$tlang.getString('gen.continue')" #end
 						class="active" 
 						accesskey="s" 
+						#if ( !($!providerCourseList.size() > 0) || !($!manualCourseList.size() > 0) ) disabled="disabled" #end
 						onclick="showNotif('submitnotif','addButton','requestCourseForm');document.requestCourseForm.option.value='add'; document.requestCourseForm.submit(); return false;" />
 				<input type="button" name="Back" 
 						value="$tlang.getString('gen.back')"
