SAK-29752 manual merge of r320334 from assignment/branches/sakai-10.x

--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
@@ -16,7 +16,9 @@
 			else{
 				showAllowResubmission()
 			}
-		});    
+	});
+
+		ASN.enableLinks();
 	});
     
     function showAllowResubmission()
