--- a/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourseManual.vm
+++ b/custom_builds/51/site-manage/branches/sakai-10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourseManual.vm
@@ -117,8 +117,10 @@
   
 				<div>
 					#if ($!isFutureTerm)
+                                        <!-- Ithaca custom BIQ-970839
 						<h4>$tlang.getString("man.siteroster")</h4>
 						<p class="instruction">$tlang.getString("man.notverifyfuture1")$!weeksAhead $tlang.getString("man.notverifyfuture2")</p>
+                                        -->
 					#else
 					  #if ($requireAuthorizer)
 						  <h4>$tlang.getString("man.siteauth")</h4>
