svn merge -r317971:321030 https://source.sakaiproject.org/svn/portal/branches/sakai-10.x

--- a/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/morpheus/page.vm
+++ b/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/morpheus/page.vm
@@ -23,6 +23,7 @@
                 #parse("/vm/morpheus/includePage.vm")
             </div>
         </div>
+        #parse("/vm/morpheus/includeAnalytics.vm")
         <!-- END VM page.vm -->
     </body>
 </html>
