--- a/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/morpheus/site.vm
+++ b/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/morpheus/site.vm
@@ -76,6 +76,7 @@
             #parse("/vm/morpheus/includePageWithNav.vm")
             
         </div> <!-- end div.container.portal.outer -->
+        #parse("/vm/morpheus/includeAnalytics.vm")
         <!-- END VM site.vm -->
     </body>
 </html>
