--- a/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/morpheus/pda.vm
+++ b/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/morpheus/pda.vm
@@ -275,6 +275,7 @@
             </div>
         </footer>
     </div>
+        #parse("/vm/morpheus/includeAnalytics.vm")
         <!-- END VM pda.vm -->
     </body>
 </html>
