--- a/assignment/sakai-10.x-ani-branch/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_review_edit.vm
+++ b/assignment/sakai-10.x-ani-branch/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_review_edit.vm
@@ -15,7 +15,7 @@ function handleEnterKeyPress(ev)
 <script type="text/javascript">
     $(document).ready(function(){
         setupToggleAreas('toggleAnchor', 'toggledContent', false, 'fast');
-		setupItemNavigator();
+		ASN.setupItemNavigator();
     });
 </script>
 <div class="portletBody">
