--- a/assignment/sakai-10.x-ani-branch/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
+++ b/assignment/sakai-10.x-ani-branch/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
@@ -12,7 +12,9 @@
 			else{
 				showAllowResubmission()
 			}
-		});    
+	});
+
+		ASN.enableLinks();
 	});
     
     function showAllowResubmission()
