--- a/custom_builds/7/assignment/assignment-10.x/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
+++ b/custom_builds/7/assignment/assignment-10.x/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
@@ -1,6 +1,10 @@
 <!-- $Id$ -->
 <!-- start: chef_assignments_instructor_list_submissions.vm  -->
-##<!-- $Header: /cvs/sakai2/legacy/tools/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm,v 1.10 2005/06/14 16:07:00 zqian.umich.edu Exp $ -->
+#set( $H = '-' )
+<script type="text/javascript" src="/library/js/jquery/ui/1.10.3/jquery-ui.1.10.3.full.min.js"></script>
+<link href="/library/js/jquery/ui/1.10.3/css/ui-lightness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/library/js/lang-datepicker/lang-datepicker.js"></script>
+
 <script type="text/javascript">
     $(document).ready(function(){
         setupToggleAreas('toggleAnchor', 'toggledContent', false, 'fast');
@@ -12,7 +16,9 @@
 			else{
 				showAllowResubmission()
 			}
-		});    
+	});
+
+		ASN.enableLinks();
 	});
     
     function showAllowResubmission()
@@ -128,7 +134,7 @@
     							$tlang.getString("gen.view2")
     						</label>
     						<span class="skip">$tlang.getString("newassig.selectmessage")</span>
-    						<select id="view" name="view" size="1" tabindex="3" onchange="document.getElementById('option').value='changeView';document.viewForm.submit();return false;">
+    						<select id="view" name="view" size="1" tabindex="3" onchange="ASN.changeView();">
     							#if (!$showSubmissionByFilterSearchOnly)
     								<option value="all" #if($!view.equals("all"))selected="selected"#end >$tlang.getString('gen.viewallgroupssections')</option>
     							#else
@@ -138,6 +144,7 @@
     								<option value="$!aGroup.Reference" #if($!view.equals($!aGroup.Reference))selected="selected"#end >$validator.escapeHtml($aGroup.Title)</option>
     							#end
     						</select>
+    						<img id="viewSpinner" class="spinner" src="/library/image/indicator.gif" />
     					</div>
     				</div>
     			#end
@@ -146,13 +153,12 @@
 			#if (!$value_CheckAnonymousGrading.equals("true"))
     			<p>
         			<label for="$form_search" class="skip">$tlang.getString("search_students")</label>
-        			<input value="$validator.escapeHtml($searchString)" name="search" id="$form_search" type="text" class="searchField"  size="20" />
-        			<input type="button" value="$tlang.getString('search')" 
-        				onclick="document.getElementById('option').value='search';document.viewForm.submit();return false;" />
+        			<input value="$validator.escapeHtml($searchString)" name="search" id="search" type="text" class="searchField"  size="20" />
+					<input type="button" value="$tlang.getString('search')" onclick="ASN.applySearchFilter('search');" />
             			#if (($!searchString) && (!$searchString.equals("")))
-            				<input type="button" class="button" value="$tlang.getString("search_clear")" 
-            					onclick="document.getElementById('option').value='clearSearch';document.viewForm.submit();return false;" />
+            				<input type="button" class="button" value="$tlang.getString("search_clear")" onclick="ASN.applySearchFilter('clearSearch');" />
             			#end
+					<img id="userFilterSpinner" class="spinner" src="/library/image/indicator.gif" />
                 </p>
             #end
             #end
@@ -170,11 +176,11 @@
 			#else
 				<div class="listNav">
 						## download all
-							<a href="" onclick="javascript:document.getElementById('option').value='download';document.viewForm.submit();return false;" title="$!tlang.getString('downall')">$!tlang.getString('downall')</a>
+							<a href="" class="noPointers" id="downloadAll" onclick="ASN.doLinkAction( 'download' );document.getElementById( 'viewForm' ).submit();return false;" title="$!tlang.getString('downall')">$!tlang.getString('downall')</a>
 						#if(!$disableGrade)
 							## upload all
-								|  <a href="" onclick="javascript:document.getElementById('option').value='upload';document.viewForm.submit();return false;" title="$!tlang.getString('uploadall.title')">$!tlang.getString('uploadall.title')</a>
-							|  <a href="" onclick="javascript:document.getElementById('option').value='releaseGrades';document.viewForm.submit();return false;" 
+								|  <a href="" class="noPointers" id="uploadAll" onclick="ASN.doLinkAction( 'upload' );document.getElementById( 'viewForm' ).submit();return false;" title="$!tlang.getString('uploadall.title')">$!tlang.getString('uploadall.title')</a>
+							|  <a href="" class="noPointers" id="releaseGrades" onclick="ASN.doLinkAction( 'releaseGrades' );document.getElementById( 'viewForm' ).submit();return false;"
 							#if ($withGrade)
 								title="$!tlang.getString('relgrad')">$!tlang.getString('relgrad')</a>
 							#else
@@ -186,7 +192,7 @@
 								#set ($helperInfo = false)
 								#set ($helperInfo = $provider.provider.getItemsHelperInfo($activity.Reference))
 								#if ($helperInfo)
-									|  <a href="#toolLinkParam("$action" "doHelp_items" "activityRef=$validator.escapeUrl($activity.Reference)&providerId=$validator.escapeUrl($provider.provider.id)")" title="$!helperInfo.description">$!helperInfo.name</a>
+									|  <a id="helpItems" class="noPointers" onclick="ASN.disableControls();" href="#toolLinkParam("$action" "doHelp_items" "activityRef=$validator.escapeUrl($activity.Reference)&providerId=$validator.escapeUrl($provider.provider.id)")" title="$!helperInfo.description">$!helperInfo.name</a>
 								#end
 							#end
 						#end
@@ -229,7 +235,8 @@
 						## instructor needs to type in default points in point-based-grading
 						<input type="text" id="defaultGrade_2" name="defaultGrade" value="$!defaultGrade" size="5" />
 					#end
-					<input type="button" accesskey="a" class="active"  name="apply" value="$tlang.getString('gen.applygrade')" onclick="document.defaultGradeForm.submit();" title="$tlang.getString("gen.applygrade")" />
+					<input type="button" accesskey="a" class="active"  name="apply" value="$tlang.getString('gen.applygrade')" onclick="ASN.applyDefaultGrade();" title="$tlang.getString("gen.applygrade")" />
+					<img id="applyGradeSpinner" class="spinner" src="/library/image/indicator.gif" />
 					<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 				</form>
 			#end
@@ -237,27 +244,28 @@
 			<div class="listNav">
 				<div class="instruction">
 					$tlang.getString("gen.viewing") $topMsgPos - $btmMsgPos $tlang.getString("gen.of") $allMsgNumber $tlang.getString("gen.items")
+					<img id="navSpinner" class="spinner" src="/library/image/indicator.gif" />
 				</div>
 				#if ($pagesize != 0)
 					#if ($goFPButton == "true")
 						<form name="firstpageForm" class="inlineForm"  method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString("gen.first")</legend><input type="submit" name="eventSubmit_doList_first" value="|&lt;" title="$tlang.getString("gen.first")" /></fieldset>
+							<fieldset><legend>$tlang.getString("gen.first")</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_first" value="|&lt;" title="$tlang.getString("gen.first")" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#else
 						<form name="firstpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString("gen.first")</legend><input type="submit" name="eventSubmit_doList_first" value="|&lt;" disabled="disabled" /></fieldset>
+							<fieldset><legend>$tlang.getString("gen.first")</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_first" value="|&lt;" disabled="disabled" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#end
 					#if ($goPPButton == "true")
 						<form name="prevpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString('gen.previous') $pagesize</legend><input type="submit" name="eventSubmit_doList_prev" value="&lt;" title="$tlang.getString('gen.previous') $pagesize" accesskey="p" /></fieldset>
+							<fieldset><legend>$tlang.getString('gen.previous') $pagesize</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_prev" value="&lt;" title="$tlang.getString('gen.previous') $pagesize" accesskey="p" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#else
 						<form name="prevpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString('gen.previous') $pagesize</legend><input type="submit" name="eventSubmit_doList_prev" value="&lt;" disabled="disabled" /></fieldset>
+							<fieldset><legend>$tlang.getString('gen.previous') $pagesize</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_prev" value="&lt;" disabled="disabled" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#end
@@ -265,7 +273,7 @@
 				<form name="pagesizeForm" class="inlineForm" method="post" action="#toolForm("$action")">
 					<input type="hidden" name="eventSubmit_doChange_pagesize" value="changepagesize" />
 					<label for="selectPageSize" class="skip">$tlang.getString("newassig.selectmessage")</label>
-					<select id="selectPageSize" name="selectPageSize" onchange="document.pagesizeForm.submit();">
+					<select id="selectPageSize" name="selectPageSize" onchange="ASN.changePageSize();">
 						#foreach ($i in $!pagesizes)
 							<option value="$i" #if($pagesize == $i) selected="selected" #end>$tlang.getString("list.show") $i $tlang.getString("list.itemsper")</option>
 						#end
@@ -275,23 +283,23 @@
 				#if ($pagesize != 0)
 					#if ($goNPButton == "true")
 						<form name="nextpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString('gen.next') $pagesize</legend><input type="submit" name="eventSubmit_doList_next" value="&gt;" title="$tlang.getString('gen.next') $pagesize" accesskey="n" /></fieldset>
+							<fieldset><legend>$tlang.getString('gen.next') $pagesize</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_next" value="&gt;" title="$tlang.getString('gen.next') $pagesize" accesskey="n" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#else
 						<form name="nextpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString('gen.next') $pagesize</legend><input type="submit" name="eventSubmit_doList_next" value="&gt;" disabled="disabled" /></fieldset>
+							<fieldset><legend>$tlang.getString('gen.next') $pagesize</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_next" value="&gt;" disabled="disabled" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#end
 					#if ($goLPButton == "true")
 						<form name="lastpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString('gen.last')</legend><input type="submit" name="eventSubmit_doList_last" value="&gt;|" title="$tlang.getString('gen.last')" /></fieldset>
+							<fieldset><legend>$tlang.getString('gen.last')</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_last" value="&gt;|" title="$tlang.getString('gen.last')" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#else
 						<form name="lastpageForm" class="inlineForm" method="post" action="#toolForm("$action")">
-							<fieldset><legend>$tlang.getString('gen.last')</legend><input type="submit" name="eventSubmit_doList_last" value="&gt;|" disabled="disabled" /></fieldset>
+							<fieldset><legend>$tlang.getString('gen.last')</legend><input type="submit" onclick="ASN.disableControls(); ASN.showSpinner( 'navSpinner' );" name="eventSubmit_doList_last" value="&gt;|" disabled="disabled" /></fieldset>
 							<input type="hidden" name="sakai_csrf_token" value="$sakai_csrf_token" />
 						</form>
 					#end
@@ -445,37 +453,29 @@
 								<label>
 									$tlang.getString("gen.acesubunt")
 								</label>
-								#chef_dateselectionwidget($name_ResubmitYear $name_ResubmitMonth $name_ResubmitDay $!value_year_from $!value_year_to $value_ResubmitYear $value_ResubmitMonth $value_ResubmitDay $dateFormat "")
-								&nbsp;$tlang.getString("gen.at")&nbsp;
-                                <label class="skip" for="$name_ResubmitHour">$tlang.getString("dateselectionwidget.hour")</label>
-								<select name="$name_ResubmitHour" id="$name_ResubmitHour">
-									#foreach ($i in [1..12])
-										#if ($i == $value_ResubmitHour)
-											<option value="$i" selected="selected">$i</option>
-										#else
-											<option value="$i">$i</option>
-										#end
-									#end
-								</select>
-                                <label class="skip" for="$name_ResubmitMin">$tlang.getString("dateselectionwidget.minute")</label>
-								<select name="$name_ResubmitMin" id="$name_ResubmitMin">
-									#foreach ($i in [0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55])
-										<option value="$i" #if($i == $value_ResubmitMin)selected="selected"#end>#if($i ==0)00#elseif($i == 5)05#else$i#end</option>
-									#end
-								</select>
-                                <label class="skip" for="$name_ResubmitAMPM">$tlang.getString("dateselectionwidget.ampm")</label>
-								<select name="$name_ResubmitAMPM" id="$name_ResubmitAMPM">
-									#foreach ($i in ["AM", "PM"])
-										#if ($i == $value_ResubmitAMPM)
-											<option value="$i" selected="selected">$i</option>
-										#else
-											<option value="$i">$i</option>
-										#end
-									#end
-								</select>
+
+  <input type="text" id="allowResubmitDate" name="allowResubmitDate" class="datepicker" value="">
+ 
+                            <script type="text/javascript">
+                                localDatePicker({
+                                    input:'#allowResubmitDate', 
+                                    useTime:1, 
+                                    val:"$value_ResubmitYear$H$value_ResubmitMonth$H$value_ResubmitDay $value_ResubmitHour:$value_ResubmitMin",
+                                    parseFormat: 'YYYY-MM-DD HH:mm',
+                                    ashidden:{
+                                        month:"allow_resubmit_closeMonth",
+                                        day:"allow_resubmit_closeDay",
+                                        year:"allow_resubmit_closeYear",
+                                        hour:"allow_resubmit_closeHour",
+                                        minute:"allow_resubmit_closeMin"
+                                    }
+                                });
+                            </script>
+
 								## for save the resubmission choice
 								<div class="act">
-									<input type="submit" class="active" name="eventSubmit_doSave_resubmission_option" value="$tlang.getString("update")" accesskey="s" />
+									<input type="submit" class="active" onclick="ASN.disableControls(); ASN.showSpinner( 'applyResubmissionSpinner' );" name="eventSubmit_doSave_resubmission_option" value="$tlang.getString("update")" accesskey="s" />
+									<img id="applyResubmissionSpinner" class="spinner" src="/library/image/indicator.gif" />
 								</div>
 							</p>
 						</div>	
@@ -898,7 +898,7 @@
 			</th>
 			<td>
 				## get gradeScale
-				#set ($gradeScale = $assignmentContent.getTypeOfGradeString())
+				#set ($gradeScale = $assignment.getContent().getTypeOfGradeString($assignment.getContent().getTypeOfGrade()))
 				$gradeScale
 				#if ($!gradeType == 3)
 					($tlang.getString("grade.max") $assignmentContent.getMaxGradePointDisplay())
