ND-83 SAK-29873 merge from master

--- a/custom_builds/142/site-manage/10.x/site-manage-tool/tool/src/webapp/css/site-manage.css
+++ b/custom_builds/142/site-manage/10.x/site-manage-tool/tool/src/webapp/css/site-manage.css
@@ -823,3 +823,7 @@ background: linear-gradient(to bottom, #884e2c 0%,#6b3d21 100%);
     top:5px;
     right:5px;
 }
+/* SAK-29873 */
+.unpublishedLabel {
+    opacity:0.2;
+}
