--- a/custom_builds/142/site-manage/10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
+++ b/custom_builds/142/site-manage/10.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
@@ -253,14 +253,16 @@
 								#end
 							</td>
 							<td headers="title">
-								<h4>
+								#if (!$service.allowAccessSite($site.Id))
+                            		<label class="unpublishedLabel">$validator.escapeHtml($site.getTitle())</label>
+								#else
 									<a href="$site.Url" target="_top">
 									$validator.escapeHtml($site.getTitle())
 									</a>
-                                    <a href="#"  id="$site.Id" class="getSiteDesc" title="$tlang.getString('list.moreinfotooltip')">
-                                        <img src="#imageLink("sakai/information_gray.png")" border="0" title ="$tlang.getString('list.moreinfotooltip')" alt ="$tlang.getString('list.moreinfotooltip')" />
-                                    </a>
-								</h4>
+								#end
+								<a href="#"  id="$site.Id" class="getSiteDesc" title="$tlang.getString('list.moreinfotooltip')">
+                                	<img src="#imageLink("sakai/information_gray.png")" border="0" title ="$tlang.getString('list.moreinfotooltip')" alt ="$tlang.getString('list.moreinfotooltip')" />
+								</a>
 							</td>
 							#if($show_id_column)
 								<td headers="id">
