svn merge -r 322478:323006 ^/assignment/branches/sakai-10.x

--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
@@ -261,7 +261,7 @@ function handleReportsTriangleDisclosure(btn)
 					</td>
 				</tr>
 			#end
-				#if($allowReviewService && $assignmentContent.AllowReviewService && $assignmentContent.AllowStudentViewReport)
+				#if($allowReviewService && $assignmentContent.AllowReviewService)
 					<tr>
 						<th>
 							$reviewServiceName&nbsp;$tlang.getString("review.report")
