irubric from https://source.sakaiproject.org/contrib/irubric/trunk/sakai-10/patches/sakai-10.4/assignment_ani.diff

--- a/assignment/sakai-10.x-ani-branch-irubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_preview_grading_submission.vm
+++ b/assignment/sakai-10.x-ani-branch-irubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_preview_grading_submission.vm
@@ -233,6 +233,12 @@
 					<span class="highlight"> $tlang.getString("gen.nograd")</span>	
 				#elseif ($!grade && $grade.length()>0)
 					$grade
+					
+				<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+				#if($scoringComponentEnabled)
+					#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+				#end
+			        
 				#else
 					$tlang.getString("ungra")
 				#end
