--- a/assignment/sakai-10.x-ani-branch-irubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
+++ b/assignment/sakai-10.x-ani-branch-irubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
@@ -309,6 +309,12 @@ function enableSubmitUnlessNoFile(checkForFile)
 										($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
 									#end
 								</strong>
+									
+								<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+								#if($scoringComponentEnabled)
+									#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+							    #end								
+						         
 							</td>
 						</tr>
 					#else
@@ -321,6 +327,12 @@ function enableSubmitUnlessNoFile(checkForFile)
 								#if ($gradeTypeTable.get($assignment.getContent().getTypeOfGrade()) == $!tlang.getString("points"))
 									($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
 								#end
+								
+								<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+								#if($scoringComponentEnabled)
+									#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+								#end
+						        
 							</td>
 						</tr>
 					#end
