--- a/assignment/sakai-10.x-ani-branch-irubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_grade.vm
+++ b/assignment/sakai-10.x-ani-branch-irubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_grade.vm
@@ -149,6 +149,12 @@ function handleReportsTriangleDisclosure(btn)
 									#end
 									#if ($gradeTypeTable.get($assignment.getContent().getTypeOfGrade()) == $!tlang.getString("points"))
 										($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
+										
+										<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+										#if($scoringComponentEnabled)
+											#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+								        #end
+								        
 									#end
 								</strong>
 							</td>
@@ -162,6 +168,12 @@ function handleReportsTriangleDisclosure(btn)
 								$gradeScale
 								#if ($gradeTypeTable.get($assignment.getContent().getTypeOfGrade()) == $!tlang.getString("points"))
 									($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
+									
+									<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+									#if($scoringComponentEnabled)
+										#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+								    #end
+							        
 								#end
 							</td>
 						</tr>
