--- a/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/pda.vm
+++ b/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/pda.vm
@@ -79,7 +79,11 @@ ${responseHead}
 ## If there's some extra header code defined, included it here
 ${includeExtraHead}
 </head>
+#if ( ${bufferedResponse} && ${responseBodyOnloadContents} )
+<body class="portalBodyPDA" onload="${responseBodyOnloadContents}">
+#else
 <body class="portalBodyPDA">
+#end
 #if ( $pageTop )
 	<script type="text/javascript">
 	var sakaiPortalWindow = "";
