--- Merging r320478 through r324944 into '.':

--- a/lessonbuilder/lessonbuilder-10.x_feature-backport/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/lessonbuilder-10.x_feature-backport/tool/src/webapp/css/Simplepagetool.css
@@ -227,7 +227,9 @@ a.edit-link:link, a.edit-link:visited, a.itemLink:link, a.itemLink:visited, a.mu
 	width: 95%;
 	margin-bottom: 0.5em;
 }
-
+.listHier .forumTopic {
+   margin-left: 2em;
+}
 .mainList {
     margin: 0;
     padding:0;
