svn merge -r316975:325045 https://source.sakaiproject.org/svn/site-manage/branches/sakai-10.x

--- a/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
+++ b/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-list.vm
@@ -266,12 +266,16 @@
 							</td>
 							<td headers="title">
 								<h4>
+								#if (!$service.allowAccessSite($site.Id))
+                            		<label class="unpublishedLabel">$validator.escapeHtml($site.getTitle())</label>
+								#else
 									<a href="$site.Url" target="_top">
 									$validator.escapeHtml($site.getTitle())
 									</a>
-                                    <a href="#"  id="$site.Id" class="getSiteDesc" title="$tlang.getString('list.moreinfotooltip')">
-                                        <img src="#imageLink("sakai/information_gray.png")" border="0" title ="$tlang.getString('list.moreinfotooltip')" alt ="$tlang.getString('list.moreinfotooltip')" />
-                                    </a>
+								#end
+								<a href="#"  id="$site.Id" class="getSiteDesc" title="$tlang.getString('list.moreinfotooltip')">
+                                	<img src="#imageLink("sakai/information_gray.png")" border="0" title ="$tlang.getString('list.moreinfotooltip')" alt ="$tlang.getString('list.moreinfotooltip')" />
+								</a>
 								</h4>
 							</td>
 							#if($show_id_column)
