--- a/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourse.vm
+++ b/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourse.vm
@@ -309,7 +309,9 @@ function redirectBasedOnSelection(){
 				
 
 		
-		#if ($termCourseList && $currentUserId != $userId)
+		## SAK-29000
+		#if ($authorizationRequired)
+			#if ($termCourseList && $currentUserId != $userId)
 					<div class="shorttext required">
 						<span class="reqStar">*</span>						
 						<label for="uniqname">		
@@ -329,6 +331,7 @@ function redirectBasedOnSelection(){
 					<p  class="instruction labelindnt">
 						$tlang.getString("man.please")
 					</p>
+			#end
 		#end
 		<p/>
 		<input type="hidden" name="back" value="$!backIndex" />
@@ -374,6 +377,8 @@ function redirectBasedOnSelection(){
 					value="$tlang.getString('gen.cancel')"
 					onclick="document.addCourseForm.option.value='cancel'; document.addCourseForm.submit(); return false;"
 					/>
+				## SAK-28990 controlled via sakai.property sitemanage.continueWithNoRoster.enabled
+				#if( $!contNoRosterEnabled )
 				<input
 					type="button" 
 					accesskey="x"
@@ -382,12 +387,16 @@ function redirectBasedOnSelection(){
 					value="$tlang.getString('nscourse.no_rosters')"
 					onclick="document.addCourseForm.option.value='norosters'; document.addCourseForm.submit(); return false;"
 					/>
+				#end
 					<span id="submitnotif" style="visibility:hidden">$tlang.getString("gen.proces")</span>
 				</p>
 			#else
 				#if( !$skipCourseSectionSelection || !$skipManualCourseCreation)
-					<!-- Add Not Listed Courses -->
-					<a href="#" onclick="javascript:submitFindCourse();">$tlang.getString('nscourse.add_course_not_listed')</a>
+					## SAK-29000
+					#if( $authorizationRequired )
+						<!-- Add Not Listed Courses -->
+						<a href="#" onclick="javascript:submitFindCourse();">$tlang.getString('nscourse.add_course_not_listed')</a>
+					#end
 				#end
 				<p class="act">
 				<input type="hidden" name="option" id="option" value="x" />
