--- a/site-manage/site-manage-10.x_custom/pageorder/tool/src/webapp/content/templates/PageList.html
+++ b/site-manage/site-manage-10.x_custom/pageorder/tool/src/webapp/content/templates/PageList.html
@@ -84,21 +84,33 @@
 					<input accesskey ="s" class="active" rsf:id="save" value="Save" type="submit" onclick="serialize('sort1');"/>
 					<input accesskey ="x" rsf:id="revert" value="Cancel" type="submit"/>
 					<input accesskey ="r" rsf:id="reset" value="Reset" type="submit" onclick="return checkReset();"/>
-					<input accesskey ="a" rsf:id="msg=sort_alpha" value="Sort" type="button" onclick="return sortByTitle();"/>
+					<input accesskey ="a" rsf:id="sort_alpha" value="Sort" type="button" onclick="return sortByTitle();"/>
 				</p>					
 			</form>
 		</div>
 	</div>
+
+
 <script type="text/javascript">
 var fluidList;
+var reorder=false;
+//Called by Producer
+function enableReorder() {
+    reorder=true;
+}
 jQuery(document).ready(function () {
     var opts = {
         selectors: {
             movables: ".sortable_item"
         }
     };
-    fluidList = fluid.reorderList("ul#sort1", opts);
+    if (reorder == true) {
+        fluidList = fluid.reorderList("ul#sort1", opts);
+    }
 });
+</script>
+
+<script type="text/javascript" rsf:id="jsreorder">
 </script>
 </body>
 </html>
