Update LTI title

--- a/custom_builds/164/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-addRemoveFeatureConfirm.vm
+++ b/custom_builds/164/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-addRemoveFeatureConfirm.vm
@@ -169,7 +169,7 @@
 				#if (!$!oldLtiTools.containsKey($ltiToolId))
 					## highlight for newly selected lti tools
 					<span class="highlight">
-						$ltiToolTitle ($ltiToolProperties.get("title"))
+						$ltiToolTitle ($ltiToolValues.get("title"))
 					</span>
 				#else
 					## existing lti tools
