50229 custom warning message

--- a/custom_builds/166/assignment/sakai-10.x_custom/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
+++ b/custom_builds/166/assignment/sakai-10.x_custom/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
@@ -926,6 +926,7 @@ function submitform(id)
 						$tlang.getString("gen.youmus")
 					</p>
 				#end
+<div id="learnersedgewarning">Prior to submitting, please be sure ALL required coursework for this module is attached (.pdf) or typed in the text box. Once you have submitted, you will be unable to make modifications.</div>
 				<div
 					#if ($!deleted.equalsIgnoreCase("true") || !$!canSubmit)
 					 class="act">
