52281 change help desk link portal page

--- a/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/site.vm
+++ b/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/site.vm
@@ -116,7 +116,7 @@
         <li class="ul1"><a target="_blank" title="Webmail" href="http://mail.gcts.edu">Webmail</a></li>
         <li class="ul2"> <a href="http://www.gordonconwell.edu/contact.cfm" title="Contact Us" target="_blank">Contact</a></li>
         <li class="ul3"> <a target="_blank" href="https://cams-web.gordonconwell.edu/estudent" title="CAMS Student Portal">Student Portal</a></li>
-        <li class="ul5"> <a target="_blank" href="http://www.gordonconwell.edu/resources/Helpdesk.cfm" title="Helpdesk">Helpdesk</a></li>
+        <li class="ul5"> <a target="_blank" href="http://www.gordonconwell.edu/resources/IT-Service-Desk.cfm" title="Service Desk">Helpdesk</a></li>
         <li class="ul6"> <a target="_blank" href="http://www.gordonconwell.edu/resources/Quick-Links2.cfm" title="Quick Links">Quicklinks</a></li>
 </ul>
 
