Updating assignment - Merging r321153 through r325765 into '.':

--- a/assignment/assignment-10.x_iRubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
+++ b/assignment/assignment-10.x_iRubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
@@ -241,7 +241,7 @@ function handleEnterKeyPress(ev)
 					</td>
 				</tr>
 			#end
-				#if($allowReviewService && $assignmentContent.AllowReviewService && $assignmentContent.AllowStudentViewReport)
+				#if($allowReviewService && $assignmentContent.AllowReviewService)
 					<tr>
 						<th>
 							$tlang.getString("review.report")
