--- a/assignment/assignment-10.x_iRubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
+++ b/assignment/assignment-10.x_iRubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
@@ -892,6 +892,8 @@ $(document).ready(function() {
 					</select>
 				</p>
 				
+			#end
+			#if (!$!categoryTable.isEmpty())
 				## show the "Category list" choices or not
 				<p id="categoryList" class="checkbox  indnt4" #if($!gradebookChoice.equals("$!gradebookChoice_add"))style="display:block" #else style="display:none" #end>
 					<label for="category">
